# stere_calibration

./: README.md
Simple_3DRebuild/: CMakeLists.txt  Camera_Cailb.cpp  Camera_Cailb.h  Simple_3DRebuild.kdev4  main.cpp
Simple_3DRebuild/.kdev4/: Simple_3DRebuild.kdev4
Simple_3DRebuild/mydata/: Intrinsics_Left.xml  extrinsics.yml  intrinsics.yml  intrinsics_Right.xml  point_cloud.txt  stereo_calib_LR.xml  stereo_calib_LR.xml~  stereo_calib_opencv.xml  stereo_calib_opencv.xml~
